portfolio/frontend/src/components/Experience/Experience.scss
@import '../../styles/mixin';

.service-box {
  .service-container {
    display: flex;
    padding: 1rem;
    border-bottom: 1px solid #e1e1e1;
    &:last-child {
      border-bottom: none;
    }
    & .northpoint {
      transform: scale(0.2);
    }
  }

  &:hover {
    .ico-circle {
      @include transition(all 500ms ease);
      color: #fff;
      background-color: initial;
      @include box-shadow(0 0 0 0.333rem black);

      &:hover {
        transform: scale(1.2);
        &.northpoint {
          transform: scale(0.25);
        }
      }
    }
  }

  .service-icon {
    .ico-circle {
      padding: 1rem;
      @include box-shadow(none);
    }
  }

  .service-content {
    text-align: left;
    padding: 0rem 1.666rem;
    .s-description {
      text-align: left;
      font-weight: bold;
      margin: 0;
    }
    .s-info {
      display: block;
      span:nth-child(1) {
        margin-bottom: 1rem;
      }
    }
  }

  @include mobile {
    padding: 0;

    .service-container {
      display: block;
      padding: 0;
      row {
        padding: 0;
      }
    }

    .service-content {
      padding: 1.333rem;
    }
  }
}

